--- a/sn-article.tex
+++ b/sn-article.tex
@@ -714,10 +714,12 @@ This domain aims to evaluate whether there are potential sources of bias in how 
 %
 \subsection*{Signalling question - 4.1 }
 %
-The signalling question 4.1 ``Was the method of outcome measurement appropriate?'' aims to evaluate whether the methods employed to measure the outcomes of interest in the study were suitable and reliable.
-This question examines whether the chosen outcome measures were relevant to the research question and whether they were accurately and consistently measured.
-It considers factors such as the validity, reliability, and precision of the outcome measurement methods.
-Validity refers to whether the chosen measures effectively capture the construct being investigated, while reliability refers to the consistency and reproducibility of the measurement.
+%The signalling question 4.1 ``Was the method of outcome measurement inappropriate?'' aims to evaluate whether the methods employed to measure the outcomes of interest in the study were suitable and reliable.
+%This question examines whether the chosen outcome measures were relevant to the research question and whether they were accurately and consistently measured.
+%It considers factors such as the validity, reliability, and precision of the outcome measurement methods.
+%Validity refers to whether the chosen measures effectively capture the construct being investigated, while reliability refers to the consistency and reproducibility of the measurement.
+The signalling question 4.1, ``Was the method of outcome measurement inappropriate?'' aims to evaluate the validity, reliability and precision of the outcome measurement method employed to measure the outcomes of interest from the study.
+The validity of an outcome measurement method refers to its ability to effectively capture the construct being investigated, while reliability refers to the consistency and reproducibility of the measurement.
 
 %
 %
@@ -733,20 +735,21 @@ Validity refers to whether the chosen measures effectively capture the construct
 %
 
 
-For annotation instructions for this signalling question, ``RoB 4.1 Was an appropriate method of outcome measurement used?'' follow the Flowchart~\ref{fig:4_1}.
+For annotation instructions for this signalling question, ``RoB 4.1 Was the method of outcome measurement inappropriate?'' follow the Flowchart~\ref{fig:4_1}.
 As per the explanation above, the flowchart requests the annotators to identify the measurement method for the outcome of interest.
-If a measurement method is found, then find the information about the validity of the measurement method is used.
-If sentences about the validity of the outcome measurement method are found, then mark them along with the name of the measurement tool and despite the validity of the method being clarified judge whether you consider this outcome measurement as appropriate and label these sentence(s) as ``4.1 Yes Bad'', if the method was inappropriate and ``4.1 No Good'' otherwise.
-If no information about the validity of the measurement tool/method is found, then mark the name of the outcome measurement and label it as ``4.1 No Information''.
+If you find information about the validity of the measurement method, mark the sentences that discuss this along with the name of the measurement tool.
+Despite the validity being clarified, assess whether you consider this outcome measurement as appropriate and label the marked sentences as ``4.1 Yes Bad'' if you believe the method was inappropriate or as ``4.1 No Good'' if you believe it was appropriate.
+If there is no information about the validity of the measurement tool/method, mark the name of the outcome measurement and label it as ``4.1 No Information''.
 %
 %
 %
 \subsection*{Signalling question - 4.2 }
 %
-The signalling question 4.1 ``Could measurement or ascertainment of the outcome have differed between intervention groups?'' assesses whether the measurement or ascertainment of the outcome could have differed between the intervention groups in a study.
-It aims to evaluate whether there were any systematic differences or biases in how the outcomes were measured or ascertained for the different groups being compared.
-This question examines whether the methods used for outcome measurement or ascertainment were consistent and applied equally to all intervention groups.
-
+The signalling question 4.1 ``Could measurement or ascertainment of the outcome have differed between intervention groups?'' assesses whether outcome measurement methods could have differed between the intervention groups in a study.
+%It aims to evaluate whether there were any systematic differences or biases in how the outcomes were measured or ascertained for the different groups being compared.
+This question examines whether the methods used for outcome measurement were valid, consistent and applied equally to all intervention groups.
+For example, if one group is assessed using a more sensitive or specific measurement tool, it may lead to overestimation or underestimation of treatment effects compared to the other group leading to systematic biases.
+In general, unequal or inconsistent outcome measurement methods between the groups can undermine the internal validity of the study.
 
 %
 %
@@ -761,8 +764,14 @@ This question examines whether the methods used for outcome measurement or ascer
 %
 %
 
-
-
+For annotation instructions for this signalling question, ``RoB 4.2 Could measurement or ascertainment of the outcome have differed between intervention groups?'' follow the Flowchart~\ref{fig:4_2}.
+Following the explanation above, the annotators are asked to find the outcome measurement methods for all intervention groups (or intervention and control).
+Mark the sentences describing outcome measurement methods from all intervention groups.
+If the annotator identifies disparity between the outcome measurement methods, then label the sentences with ``4.2 Yes Bad'', and ``4.2 No Good'' otherwise.
+For example, ``The control group's gait speed was measured using a standard stopwatch-based manual timing method. The intervention group's gait speed was measured using an advanced motion capture system.
+This significant differences in measurement methods raises concerns regarding potential biases and systematic differences in outcome assessment.
+In contrast, ``Both the control group and the experimental group utilized a validated visual analog scale (VAS) to assess pain intensity.''
+The uniformity in the measurement methods increases the internal validity as well as comparability of the outcomes.
 %
 %
 %
