--- a/sn-article.tex
+++ b/sn-article.tex
@@ -777,12 +777,35 @@ The uniformity in the measurement methods increases the internal validity as wel
 %
 \subsection*{Signalling question - 4.3 }
 %
+The signalling question 4.3 ``Were outcome assessors aware of the intervention received by the study participants?'' assesses the blinding or masking of outcome assessors in a study.
+If the outcome assessors are unblinded, they may unintentionally or inadvertently favour one one intervention over another based on preconceived notions about the interventions.
+Therefore, blinding the outcome assessors helps minimize the risk of bias and ensures that the assessments are conducted objectively and independently from knowledge of the intervention.
+%- Inadvertently favor one intervention over another
+%- Systematic differences in the outcome measurement (reduces accuracy and comparability)
+%- recording outcomes in a way that aligns with their expectations.
+%s- observer expectancy effect
+%
+%
+%
 \begin{figure}[hbt]
     \centering
     \includegraphics[width=\textwidth]{figures/4_3.pdf}
     \caption{Annotation instructions for the RoB 4.3 signalling question.}
     \label{fig:4_3}
 \end{figure}
+%
+%
+%
+
+
+For annotation instructions for this signalling question, ``RoB 4.3 Were outcome assessors aware of the intervention received by the study participants?'' follow the Flowchart~\ref{fig:4_3}.
+Following the explanation above, the first diamond in the flowchart instructs the annotators to identify information about assessor blinding. 
+If assessor blinding information is not found, it will be automatically marked as ``2.3 No Information'' for this signalling question, following the  ``No'' arrow.
+If proper assessor blinding description is found or the sentences describing that the outcome assessors were unaware of the assigned intervention, then annotate it and mark the sentence with ``4.3 No Good'' label.
+In certain cases, outcome assessors are not blinded or could not be blinded, then mark such descriptions with label ``4.3 Yes Bad''.
+For example, ``The outcome assessors were aware of the intervention received by participants, as the study aimed to evaluate the impact of a behavioral intervention on self-reported anxiety levels.''
+This information if not found from the Methods sections, could also be annotated in the study abstract.
+
 %
 %
 %
