--- a/sn-article.tex
+++ b/sn-article.tex
@@ -27,7 +27,7 @@
 %%\documentclass[pdflatex,sn-basic]{sn-jnl}% Basic Springer Nature Reference Style/Chemistry Reference Style
 
 
-%%Note: the following reference styles support Namedate and Numbered referencing. By default the style follows the most common style. To switch between the options you can add or remove Numbered in the optional parenthesis. 
+%%Note: the following reference styles support Namedate and Numbered referencing. By default the style follows the most common style. To switch between the options you can add or remove Numbered in the optional parenthesis. 
 %%The option is available for: sn-basic.bst, sn-vancouver.bst, sn-chicago.bst, sn-mathphys.bst. %  
  
 %%\documentclass[sn-nature]{sn-jnl}% Style for submissions to Nature Portfolio journals
@@ -114,7 +114,7 @@ The flowcharts consist of several components, including:
 %
 The placards also include additional instructions in the bottom left corner, specifying whether annotators should annotate full sentences or only phrases.
 In the following subsections, detailed annotation guidelines are provided for each signalling question (SQ), using the instructional placards developed in consultation with RoB assessment and natural language processing experts.
-It is important to note that these generic annotation guidelines are supplementary to the detailed guidelines in the subsequent subsections and should be used in conjunction with the original detailed RoB 2.0 guidelines.
+It is important to note that these generic annotation guidelines are supplementary to the detailed guidelines in the subsequent subsections and should be used in conjunction with the original detailed revised Cochrane RoB 2.0 guidelines~\cite{sterne2019rob}.
 %
 %
 %
@@ -811,16 +811,34 @@ This information if not found from the Methods sections, could also be annotated
 %
 \subsection*{Signalling question - 4.4 }
 %
+The signalling question 4.4 ``Could assessment of the outcome have been influenced by knowledge of intervention received?'' evaluates the potential for bias resulting from outcome assessors' awareness of the intervention received by the participants.
+This question aims to assess whether outcome assessments could have been influenced or biased by the assessors' knowledge of the specific treatment or intervention assignment.
+
+%
+%
+%
 \begin{figure}[hbt]
     \centering
     \includegraphics[width=\textwidth]{figures/4_4.pdf}
     \caption{Annotation instructions for the RoB 4.4 signalling question.}
     \label{fig:4_4}
 \end{figure}
+
+
+
+For annotation instructions for this signalling question, ``RoB 4.4 Could assessment of the outcome have been influenced by knowledge of intervention received?'' follow the Flowchart~\ref{fig:4_4}.
+
 %
 %
 %
 \subsection*{Signalling question - 4.5 }
+%
+The signalling question 4.5 ``Is it likely that the assessment of the outcome was influenced by knowledge of the intervention received?'' evaluates the likelihood that the outcome assessment was biased due to assessors' knowledge of the intervention received by the participants.
+
+
+
+%
+%
 %
 \begin{figure}[htbp]
     \centering
