--- a/sn-article.tex
+++ b/sn-article.tex
@@ -812,7 +812,8 @@ This information if not found from the Methods sections, could also be annotated
 \subsection*{Signalling question - 4.4 }
 %
 The signalling question 4.4 ``Could assessment of the outcome have been influenced by knowledge of intervention received?'' evaluates the potential for bias resulting from outcome assessors' awareness of the intervention received by the participants.
-This question aims to assess whether outcome assessments could have been influenced or biased by the assessors' knowledge of the specific treatment or intervention assignment.
+This question aims to assess whether outcome assessments ``could'' have been influenced or biased by the assessors' knowledge of the intervention assignment.
+As explained in the signalling question 4.3, that assessors awareness of assigned intervention could cause biases.
 
 %
 %
@@ -827,6 +828,11 @@ This question aims to assess whether outcome assessments could have been influen
 
 
 For annotation instructions for this signalling question, ``RoB 4.4 Could assessment of the outcome have been influenced by knowledge of intervention received?'' follow the Flowchart~\ref{fig:4_4}.
+The first diamond in the flowchart asks the annotators to look for descriptions of outcomes assessed.
+If the outcome of interest is subjective outcome, then annotate the sentence describing the outcome measurement in context of its assessment and label the description as ``4.4 Yes Bad''.
+If the outcome of interest is objective outcome or mortality outcome, then annotate the sentence describing the outcome measurement in context of its assessment, but this time around label the description as ``4.4 No Good''.
+For the domains of physiotherapy and rehabilitation, the question is quite theoretical and solely depends on whether the outcome assessed was subjective, objective or mortality.
+
 
 %
 %
@@ -834,7 +840,8 @@ For annotation instructions for this signalling question, ``RoB 4.4 Could assess
 \subsection*{Signalling question - 4.5 }
 %
 The signalling question 4.5 ``Is it likely that the assessment of the outcome was influenced by knowledge of the intervention received?'' evaluates the likelihood that the outcome assessment was biased due to assessors' knowledge of the intervention received by the participants.
-
+The question is similar to the question 4.4, but it directly asks about the likelihood of the assessment being influenced by knowledge of the intervention.
+It seeks a determination of the probability or likelihood of such an influence being present.
 
 
 %
@@ -846,6 +853,16 @@ The signalling question 4.5 ``Is it likely that the assessment of the outcome wa
     \caption{Annotation instructions for the RoB 4.5 signalling question.}
     \label{fig:4_5}
 \end{figure}
+%
+%
+%
+
+
+For annotation instructions for this signalling question, ``RoB 4.5 Is it likely that the assessment of the outcome was influenced by knowledge of the intervention received?'' follow the Flowchart~\ref{fig:4_5}.
+The first diamond in the flowchart asks the annotators to find text that hints if the outcome assessment was influenced by the knowledge of intervention used.
+If such a text is identified, then is it likely that the outcome assessment was influenced by the knowledge of the intervention received, if no the mark the identified description with the label ``4.5 No Good'', and otherwise as ``4.5 Yes Bad''.
+The information is likely found in the Methods section.
+
 %
 %
 %
