--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -452,3 +452,23 @@
   publisher={The American Society of Anesthesiologists}
 }
 
+@article{saltaji2017randomized,
+  title={Randomized clinical trials in dentistry: Risks of bias, risks of random errors, reporting quality, and methodologic quality over the years 1955--2013},
+  author={Saltaji, Humam and Armijo-Olivo, Susan and Cummings, Greta G and Amin, Maryam and Flores-Mir, Carlos},
+  journal={PloS one},
+  volume={12},
+  number={12},
+  pages={e0190089},
+  year={2017},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{rahim2021effect,
+  title={The effect of a brown-rice diets on glycemic control and metabolic parameters in prediabetes and type 2 diabetes mellitus: a meta-analysis of randomized controlled trials and controlled clinical trials},
+  author={Rahim, Anis Farhanah Abdul and Norhayati, Mohd Noor and Zainudin, Aida Maziha},
+  journal={PeerJ},
+  volume={9},
+  pages={e11291},
+  year={2021},
+  publisher={PeerJ Inc.}
+}
